--- a/config.yml
+++ b/config.yml
@@ -30,9 +30,15 @@ menu:
     - name: Tags
       url: tags/
       weight: 5
-    - name: Blog
-      url: https://koalajahat.org/blog
+    - name: LinkedIn
+      url: https://www.linkedin.com/in/achmadrahman/
       weight: 6
+    - name: GitHub
+      url: https://github.com/achmadrahmanm
+      weight: 7
+    - name: FastWork
+      url: https://fastwork.id/user/achmadrahmanm
+      weight: 8
 
 params:
   description: "Achmad Rahman Mawardi, Master of none"
@@ -68,7 +74,6 @@ params:
     imageStyle: "object-fit: cover;"
 
     buttons:
-    
       # - name: Data
       #   url: data/
       # - name: Books
@@ -83,8 +88,12 @@ params:
         url: tags/
       # - name: Archive
       #   url: archive/
-      - name: Blog
-        url: https://koalajahat.org/blog
+      - name: LinkedIn
+        url: https://www.linkedin.com/in/achmadrahman/
+      - name: GitHub
+        url: https://github.com/achmadrahmanm
+      - name: FastWork
+        url: https://fastwork.id/user/achmadrahmanm
 
   socialIcons:
     - name: CV
