--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://pascalmichaillat.org/hugo-website/
+baseURL: https://achmadrahmanm.github.io/
 title: Achmad Rahman Mawardi
 theme: PaperMod
 
